--- a/Net7APIBoilerPlate.Tests/Net7APIBoilerPlate.Tests.csproj
+++ b/Net7APIBoilerPlate.Tests/Net7APIBoilerPlate.Tests.csproj
@@ -6,16 +6,19 @@
         <IsPackable>false</IsPackable>
 
         <LangVersion>11</LangVersion>
+
+        <PackageId>Net7APIBoilerPlate.Tests</PackageId>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="nunit" Version="3.13.3" />
+        <PackageReference Include="Moq" Version="4.18.1" />
+        <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Sandbox\Sandbox.csproj" />
+      <ProjectReference Include="..\Net7APIBoilerplate\Net7APIBoilerplate.csproj" />
     </ItemGroup>
 
 </Project>
